update proposal game

--- a/proposalGame.tex
+++ b/proposalGame.tex
@@ -1,5 +1,27 @@
-\documentclass{article}
+\documentclass[12pt]{extarticle}
+\usepackage[utf8]{inputenc}
+\usepackage{cite}
+
+\title{Proposal Pembuatan Game\\Dalam Penugasan\\Struktur Data dan Analisa Algoritma}
+\author{Mochammad Hilmi Rusydiansyah\\5024211008\\Strukdat(A)}
+%\date{January 2019}
 
 \begin{document}
-	Hello y'all, hehe
+	
+	\maketitle
+	\begin{center}
+		\large{
+			Dosen:
+			\\
+			Dr. Eko Mulyanto Yuniarno, S.T., M.T.
+		}
+	\end{center}
+	\newpage
+	
+	\begin{itemize}
+		\item \textbf{Latar Belakang}
+		\item \textbf{Rencana Game}
+	\end{itemize}
+	
+	
 \end{document}
