Alhamdulillah sudah selesai tugas 1

--- a/laporan_tugas_1/laporan_tugas_1.tex
+++ b/laporan_tugas_1/laporan_tugas_1.tex
@@ -5,7 +5,34 @@
 % See "book", "report", "letter" for other types of document.
 
 \documentclass[11pt]{article} % use larger type; default would be 10pt
-\usepackage{listings}  
+\usepackage{listings}
+
+% tambahan
+\usepackage{xcolor}
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+\lstdefinestyle{mystyle}{
+	backgroundcolor=\color{backcolour},   
+	commentstyle=\color{codegreen},
+	keywordstyle=\color{magenta},
+	numberstyle=\tiny\color{codegray},
+	stringstyle=\color{codepurple},
+	basicstyle=\ttfamily\footnotesize,
+	breakatwhitespace=false,         
+	breaklines=true,                 
+	captionpos=b,                    
+	keepspaces=true,                 
+	numbers=left,                    
+	numbersep=5pt,                  
+	showspaces=false,                
+	showstringspaces=false,
+	showtabs=false,                  
+	tabsize=4
+}
+\lstset{style=mystyle}
+
 
 
 \usepackage[utf8]{inputenc} % set input encoding (not needed with XeLaTeX)
@@ -55,7 +82,7 @@
 
 %%% The "real" document content comes below...
 
-\title{Laporan Tugas 1}
+\title{Laporan Tugas 1\\Struktur Data dan Analisa Algoritma}
 \author{Mochammad Hilmi Rusydiansyah\\5024211008}
 %\date{} % Activate to display a given date or no date (if empty),
 % otherwise the current date is printed 
@@ -76,60 +103,32 @@
 	Dalam game ini, anda akan berperan sebagai penjaga kebun binatang. Suatu saat terjadi kebocoran zat kimia yang terletak di dekat kebun binatang. Kebocoran tersebut mengakibatkan hewan-hewan terkontaminasi zat kimia dan menjadi ganas, sehingga banyak dari hewan-hewan tersebut yang lepas dari kandang. Kondisi menjadi kacau, anda sebagai penjaga kebun binatang pun harus berusaha menghindari kejaran sambil memberi makan hewan-hewan yang ganas terseebut.
 	
 	\section{Cara Bermain}
-	\begin{itemize}
-		\item 
-	\end{itemize}
-	Mekanisme game yang digunakan adalah tembak-tembakan dengan perspektif kamera Top-down. Seakan-akan, pemain harus menembakkan peluru ke arah target yang terus bergerak mengejar pemain itu sendiri. Dengan kata lain, pemain harus melempar makanan ke arah hewan-hewan yang ganas, yang terus berusaha mengejar pemain itu sendiri. Apabila peluru makanan tepat mengenai hewan sasaran, maka hewan tersebut akan berhenti mengejar dan sebaliknya memakan peluru makanan tadi. Pemain harus berusaha mendapatkan skor tertinggi dengan bertahan selama mungkin.
-	Pemain memiliki bar darah, apabila hewan berhasil mencapai pemain, darah pemain akan berkurang.
-
-	\begin{lstlisting}
-		#include <stdio.h>
-		class ClArray {
-			private:
-			float data[100];
-			int Size;
-			int Length;
-			public:
-			ClArray()
-			{
-				Size = 100;
-				Length = 0;
-			}
-			void Append(float Vi)
-			{
-				if (Length<Size)
-				{
-					Length++;
-					data[Length-1]=Vi;
-				}
-				
-			}
-			void Display() 
-			{
-				int  i;
-				for (i=0;i<Length;i++)
-				{
-					printf("%f\n",data[i]);
-				}
-				
-			}
-			
-		};
+		\begin{itemize}
+			\item Mekanisme game yang digunakan adalah tembak-tembakan dengan perspektif kamera Top-down
 		
-		int main()
-		{
-			class ClArray d;
-			d.Append(1);
-			d.Display();
-			return 0;
-		}
+			\item Pemain harus menembakkan peluru ke arah target yang terus bergerak mengejar pemain itu sendiri. Dengan kata lain, pemain harus melempar makanan ke arah hewan-hewan yang terus berusaha mengejar pemain itu sendiri
 		
-	\end{lstlisting}
+			\item Apabila peluru makanan tepat mengenai hewan sasaran, maka hewan tersebut akan berhenti mengejar dan sebaliknya memakan peluru makanan tadi
+		
+			\item Pemain harus berusaha mendapatkan skor tertinggi dengan bertahan selama mungkin
+		
+			\item Pemain memiliki bar darah, apabila hewan berhasil mencapai dan menyerang pemain, darah pemain akan berkurang
+		
+			\item Pemain dinyatakan kalah apabila bar darah telah habis
+		
+			\item Akan ada drop item seperti darah, peluru, dan lain-lain untuk meningkatkan keseruan dalam bermain
+		\end{itemize}
 	
-	Your text goes here.
+	\newpage
+	\begin{center}
+		\textbf{Source Code Array Abstract with OOP}
+	\end{center}
+	\lstinputlisting[language=C++]{../src/array_abstract_in_oop.cpp}
 	
-	\subsection{A subsection}
-	
-	More text.
+	\newpage
+	\begin{center}
+		\textbf{Source Code for Edit Plane Movement Flows}
+	\end{center}
+	\lstinputlisting[language=C++]{../src/game3_editMoveFlow.cpp}
 	
 \end{document}
